# ml-zoomcamp

./: .gitignore  README.md  homework-01-intro.py  homework-02-regression.py  homework-03-classification.py  homework-04-evaluation.py  homework-06-trees.py  homework-08-nn-dl.ipynb  homework5-deployment.py  list_datasets.py  midterm-project-v2.ipynb  midterm-project.py  ml_zoomcamp3.py  ml_zoomcamp3_revision.py  ml_zoomcamp4.py  ml_zoomcamp6.py  predict.py  pyproject.toml
mid-term/: Dockerfile  README.md  midterm-project-v2.ipynb  predict.py  train_xgb.py
