[project]
name = "ml-zoomcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.13"
dependencies = [
    "altair>=5.5.0",
    "fastapi>=0.119.1",
    "ipython>=9.6.0",
    "kaggle>=1.6.17",
    "kagglehub>=0.3.13",
    "marimo[lsp,mcp]>=0.7.1",
    "numpy>=2.3.3",
    "openai>=1.108.1",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "ruff>=0.14.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "uvicorn>=0.35.0",
    "watchdog>=6.0.0",
    "xgboost>=3.1.1",
]

[tool.uv.workspace]
members = [
    "homework05-deployment",
]
